# tilewarden

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pull_request.yml
src/tilewarden/: __init__.py  __main__.py  cli.py  footprints.py  gcs.py  geopackage.py  inventory.py  output.py  parsing.py
tests/: test_cli.py  test_footprints.py  test_gcs.py  test_inventory.py  test_output.py  test_parsing.py
